--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "sqlite3": "^5.1.7-rc.0",
     "styled-components": "^6.1.6",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.7"
   },
